fix flip card on firefox

--- a/src/pages/selectReceiver/styles.module.scss
+++ b/src/pages/selectReceiver/styles.module.scss
@@ -15,6 +15,7 @@
     height: 10rem;
     perspective: 1000px;
     cursor: pointer;
+    border-radius: .75rem;
     
     &.Unactive {
       cursor: default;
@@ -27,8 +28,7 @@
     height: 100%;
     transition: transform 0.6s;
     transform-style: preserve-3d;
-    border-radius: .75rem;
-    border: 2px solid black;
+    backface-visibility: hidden;
 
     &.Active {
       transform: rotateY(180deg);
@@ -41,6 +41,7 @@
     height: 100%;
     backface-visibility: hidden;
     display: grid;
+    border: 2px solid black;
     place-items: center;
   }
 
